archive/pre_talos/kubernetes/test-cluster/apps/media/mediabox/app/lldap-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lldap
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: account-group
spec:
  ingressClassName: nginx-default
  tls:
    - secretName: ${SECRET_DOMAIN/./-}-production-tls
      hosts:
        - lldap.${SECRET_DOMAIN}
  rules:
    - host: lldap.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mediabox
                port:
                  name: lldap
